finished in jquery

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>exo moderateur</title>
-    </head>
-    <body>
-        <textarea rows="8" cols="80" id="text"></textarea>
-        <input type="button" value="Modérateur" id="btn" onclick="myFunction()">
-        <p>Résultat !</p>
-        <div id="result">
+<head>
+    <meta charset="utf-8">
+    <title>exo moderateur</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="./css/master.css">
+</head>
+<body>
+    <textarea rows="8" cols="80" id="text"></textarea>
+    <input type="button" value="Modérateur" id="btn">
+    <p>Résultat !</p>
+    <div id="result">
 
-        </div>
-    </body>
-    <script src="./js/script.js"></script>
+    </div>
+</body>
+<script src="./js/script.js"></script>
 </html>
